--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
       },
       "browser_laptop": {
         "dir": "src/browser-laptop",
+        "branch": "0.24.x",
         "repository": {
           "url": "https://github.com/brave/browser-laptop.git"
         }
