--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       },
       "browser_laptop": {
         "dir": "src/browser-laptop",
-        "branch": "0.24.x",
+        "branch": "0.23.x-c69",
         "repository": {
           "url": "https://github.com/brave/browser-laptop.git"
         }
